# kb

./: 404.html  LAST_CHANGE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/hooks/: pre-commit
.github/scripts/: last_changed.py  update_requirements.py
.github/workflows/: mkdocs.yml
api/generating_qrcode/: index.html
architecture/_bookmarks/: index.html
bash/command_and_aliases/: index.html
c_sharp/_bookmarks/: index.html
c_sharp/cron_clean_all_projects/: index.html
c_sharp/installing_dotnet_on_ubuntu/: index.html
c_sharp/validacao_cpf_cnpj/: index.html
docker/databases_portainer/: index.html
docker/mongodb/: index.html
docker/postgres/: index.html
docs/: index.md
docs/api/: generating_qrcode.md
docs/architecture/: _bookmarks.md
docs/bash/: command_and_aliases.md
docs/c_sharp/: 0_bookmarks.md  _bookmarks.md  cron_clean_all_projects.md  installing_dotnet_on_ubuntu.md  validacao_cpf_cnpj.md
docs/docker/: databases_portainer.md  mongodb.md  postgres.md
docs/free_pascal/: shared_dll.md
docs/git/: _bookmarks.md
docs/golang/: 0_bookmarks.md  _bookmarks.md  bookmarks.md  detecting_filesystem_events.md
docs/javascript/: _bookmarks.md
docs/python/: _bookmarks.md  bookmarks.md  caca_palavras.md  fast_folder_iteration.md  metaclass_tutorial.md  virtual_env_setup.md
docs/tools/: 0_bookmarks.md  _bookmarks.md  animated_gifs_from_console.md  audio_device_switch.md  http_server_for_testing.md  network.md  (+2 more)
search/: search_index.json
tags/: index.html
tools/: audio_device_switch.go
(+21 files in other folders)
