[tool.poetry]
name = "guionardo-kb"
version = "0.1.0"
description = "My knowledge-base for all documentation"
authors = ["Guionardo Furlan <guionardo@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "guionardo_kb"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-minify-plugin = "^0.6.2"
mkdocs-material = "^8.5.11"
pymdown-extensions = "^9.9"
mkdocs-build-plantuml-plugin = "^1.7.4"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocs-material-extensions = "^1.1.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
